--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -1,5 +1,19 @@
 .banner-principal{
    height: 60vh;
+   background-image: url('/assets/img/portada-covenas.webp');
+   background-size: cover;
+   background-repeat: no-repeat;
+   position: relative;
+}
+
+.banner-principal::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, .6);
 }
 
 .banner-principal .container, .banner-principal .row{
