--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -131,8 +131,14 @@
     aspect-ratio: 16/9;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1200px) {
     .container-ocensa-2024{
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .body-2024 p{
+        font-size: 14px;
     }
 }
