--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -89,6 +89,81 @@
     gap: 35px;
 }
 
+.card-interactive-icons{
+    background-color: #f7f7f7;
+    position: relative;  
+}
+
+.card-interactive-icons::before{
+    content: '';
+    width: 5px;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: var(--gray-light-ocensa);
+}
+
+.card-interactive-icons___title{
+    font-family: var(--helvetica);
+}
+
+.card-interactive-icons___box-icon{
+    width: 51px ;
+    height: 51px;
+    min-width: 51px;
+    border: 2px solid;
+    border-color: var(--border-fill);
+    border-radius: 50%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .3s;
+}
+
+.card-interactive-icons__container.active .card-interactive-icons___box-icon{
+    background-color: var(--border-fill);
+}
+
+.card-interactive-icons___box-description{
+    font-size: 12px;
+}
+
+.card-interactive-icons___box-icon svg{
+    width: 60%;
+}
+
+.card-interactive-icons__container{
+    cursor: pointer;
+}
+
+.card-interactive-icons__container:hover .card-interactive-icons___box-icon{
+    background-color: var(--border-fill);
+}
+
+.location-map-dot{
+    background-color: black;
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 4px solid white;
+    box-sizing: border-box;
+    position: absolute;
+}
+
+.location-map-dot::before{
+    content: '';
+    outline: 1px solid var(--outline-color);
+    width: 300%;
+    height: 300%;
+    position: absolute;
+    left: -100%;
+    top: -100%;
+    border-radius: 50%;
+}
+
 @media screen and (max-width: 1200px) {
     .banner-principal{
         height: auto;
