--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -122,12 +122,23 @@
     transition: .3s;
 }
 
+.card-interactive-icons___box-icon.small{
+    width: 40px;
+    height: 40px;
+    min-width: 40px;
+    background-color: white;
+}
+
 .card-interactive-icons___box-description{
     font-size: 12px;
 }
 
 .card-interactive-icons___box-icon svg{
     width: 60%;
+}
+
+.card-interactive-icons___box-icon.small svg{
+    width: 50%;   
 }
 
 .card-interactive-icons__container{
