--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -138,7 +138,9 @@
 }
 
 .card-interactive-icons___box-icon.small svg{
-    width: 50%;   
+    width: 100%;
+    max-height: 25px;
+    max-width: 25px;  
 }
 
 .card-interactive-icons__container{
