--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -221,3 +221,12 @@
         min-width: 60px;
     }
 } 
+
+@media screen and (max-width: 576px) {
+    .sticky-mobile {
+      position: -webkit-sticky !important;
+      position: sticky !important;
+      top: 0; 
+      z-index: 10;
+    }
+}
