--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -168,6 +168,13 @@
     position: absolute;
 }
 
+#covenas-sre-14 .location-map-dot {
+    width: 12px;
+    height: 12px;
+    border-color: #ff0000;
+    background-color: white;;
+}
+
 .location-map-dot::before{
     content: '';
     outline: 1px solid var(--outline-color);
