feat: Posiciona área marcada de fuente de emisión de ruido y de SRE Área de control

--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -217,6 +217,12 @@
     z-index: 3
 }
 
+#covenas-monitoreo-13 {
+    .location-map-zona {
+       filter: sepia(1) saturate(3) brightness(0.9) hue-rotate(330deg);
+    }
+}
+
 @media screen and (min-width: 1200px) {
     .card-interactive-icons__container:hover .card-interactive-icons___box-icon{
         background-color: var(--border-fill);
