--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -62,6 +62,11 @@
     transition: .3s;
 }
 
+.custom-arrow-2024.slick-disabled{
+    opacity: .6;
+    pointer-events: none;
+}
+
 .custom-arrow-2024:hover{
     opacity: .7;
 }
