--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -1,5 +1,4 @@
 .banner-principal{
-   min-height: 60vh;
    background-image: url('/assets/img/portada-covenas.webp');
    background-size: cover;
    background-repeat: no-repeat;
@@ -14,10 +13,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0, .6);
-}
-
-.banner-principal .container, .banner-principal .row{
-    height: 100%;
 }
 
 .banner-principal__title{
@@ -78,7 +73,7 @@
 }
 
 .banner-principal .certifieds img{
-    max-width: calc(100% / 7);
+    width: calc(100% / 7);
 }
 
 .terminal-bottom img{
@@ -234,10 +229,6 @@
 }
 
 @media screen and (max-width: 1200px) {
-    .banner-principal{
-        height: auto;
-    }
-
     .card-ocensa.menu-map a{
         font-size: 16px;
     }
