--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -269,6 +269,9 @@
   .wrapper-scroll {
     overflow-x: scroll;
   }
+  .banner-principal__title{
+    font-size: 50px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
