--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -272,6 +272,10 @@
   .banner-principal__title{
     font-size: 50px;
   }
+
+  .card-interactive-icons___title {
+    font-size: 15px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
