--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -175,12 +175,14 @@
 }
 
 #cusiana-sre-8 .location-map-dot,
-#covenas-sre-13 .location-map-dot {
+#covenas-sre-13 .location-map-dot,
+#porvenir-sre-8 .location-map-dot {
   border-radius: 0;
 }
 
 #cusiana-sre-8 .location-map-dot,
-#covenas-sre-13 .location-map-dot {
+#covenas-sre-13 .location-map-dot,
+#porvenir-sre-8 .location-map-dot {
   width: 12px;
   height: 12px;
   border-color: #ff5512;
@@ -264,6 +266,10 @@
 }
 
 .dots-map-2024.dots-sre#cusiana-sre-15 .location-map-dot::before{
+  display: none;
+}
+
+#porvenir-sre-8 .location-map-dot::before{
   display: none;
 }
 
