--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -136,6 +136,19 @@
     aspect-ratio: 16/9;
 }
 
+.custom-scroll-2024::-webkit-scrollbar {
+    width: 6px;
+}
+
+.custom-scroll-2024::-webkit-scrollbar-thumb {
+    background-color: var(--green-ocensa);
+    border-radius: 50px;
+}
+
+/* .custom-scroll-2024::-webkit-scrollbar-track {
+    background-color: var(--gray-light-ocensa);
+} */
+
 @media screen and (max-width: 1200px) {
     .container-ocensa-2024{
         width: 100%;
