--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -305,6 +305,18 @@
   line-height: normal;
 }
 
+/* Hover color for stroke some icons */
+div[data-target="cusiana-operaciones-17"]:hover svg path,
+div[data-target="cusiana-operaciones-29"]:hover svg path,
+div[data-target="cusiana-operaciones-31"]:hover svg path,
+div[data-target="cusiana-operaciones-38"]:hover svg path,
+div[data-target="cusiana-operaciones-17"].active svg path,
+div[data-target="cusiana-operaciones-29"].active svg path,
+div[data-target="cusiana-operaciones-31"].active svg path,
+div[data-target="cusiana-operaciones-38"].active svg path {
+  stroke: var(--hover-color) !important;
+}
+
 @media screen and (min-width: 1200px) {
   .card-interactive-icons__container:hover .card-interactive-icons___box-icon {
     background-color: var(--border-fill);
