--- a/assets/styles/page-style.css
+++ b/assets/styles/page-style.css
@@ -175,13 +175,11 @@
   position: absolute;
 }
 
-.miraflores-sre-13 .location-map-dot,
-#cusiana-sre-8 .location-map-dot.dot-image{
+.miraflores-sre-13 .location-map-dot{
   border-radius: 0;
 }
 
-.miraflores-sre-13 .location-map-dot,
-#cusiana-sre-8 .location-map-dot {
+.miraflores-sre-13 .location-map-dot{
   width: 12px;
   height: 12px;
   border-color: #ff5512;
